--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -12,14 +12,21 @@
 
 <view class='main'>
   <view class='itemBox'>
-    <view class='titleBox'></view>
+    <view class='titleBox'>
+      <view class='ordNo'>订单编号:2019465466523</view>
+      <view class='status'>待付款</view>
+    </view>
     <view class='contentBox'>
       <view class='infoBox'>
         <view class='imgBox'><image></image></view>
         <view class='infoTextBox'>
           <view class='infoText'>阿斯顿无法发斯蒂芬看见了</view>
+          <view class='infoPriceBox'>
           <view class='infoPrice'>￥299.00</view>
-          <view class='infoNum'>x1</view>
+            <view class='infoNum'>x1</view>
+            
+          </view>
+          
         </view>
       </view><!--商品详情-->
       <view class='priceBox'>
@@ -29,7 +36,7 @@
         </view>
         <view class='totlePriceBox'>
           <view>合计</view>
-          <view>-￥299.00</view>
+          <view>￥299.00</view>
         </view>
       </view><!--价格统计-->
     </view>
