--- a/app.wxss
+++ b/app.wxss
@@ -17,3 +17,74 @@ page{
 image{
   border: 1px solid #ccc;
 }
+
+.dedPrice{
+  font-size:24rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(153,153,153,1);
+}
+
+.title{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(51,51,51,1);
+}
+.dedTitle{
+  font-size:24rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(153,153,153,1);
+}
+.price{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(204,0,0,1);
+}
+.priceStronge{
+  font-size:32rpx;
+  font-family:PingFang-SC-Heavy;
+  font-weight:800;
+  color:rgba(204,0,0,1);
+}
+.fontTitle{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(51,51,51,1);
+}
+
+.fontSpecial{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(130,76,31,1);
+}
+
+.btnCancel{
+  text-align: center;
+  line-height: 56rpx;
+  width:164rpx;
+  height:56rpx;
+  background:rgba(108,65,39,0);
+  border:2rpx solid rgba(153, 153, 153, 1);
+  border-radius:28rpx;
+  font-size:26rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(153,153,153,1);
+}
+.btnSpecial{
+  text-align: center;
+  line-height: 56rpx;
+  width:164rpx;
+  height:56rpx;
+  background:linear-gradient(90deg,rgba(130,76,31,1),rgba(151,79,10,1));
+  border-radius:28rpx;
+  font-size:26rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(255,255,255,1);
+}
