--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -60,8 +60,31 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-}
+  flex-grow: 1;
+  padding-left: 20rpx;
 
+}
+.infoText{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(51,51,51,1);
+  line-height:48rpx;
+}
+.infoPrice{
+  font-size:32rpx;
+  font-family:PingFang-SC-Heavy;
+  font-weight:800;
+  color:rgba(204,0,0,1);
+  line-height:24rpx;
+}
+.infoNum{
+  font-size:24rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(153,153,153,1);
+  line-height:24rpx;
+}
 .infoPriceBox{
   display: flex;
   flex-direction: row;
@@ -75,6 +98,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size:24rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(153,153,153,1);
 }
 .totlePriceBox{
   display: flex;
@@ -105,3 +132,17 @@
   color:rgba(130,76,31,1);
 }
 
+.totlePriceTitle{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(51,51,51,1);
+}
+
+.totlePricePrice{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(204,0,0,1);
+  line-height:24rpx;
+}
