--- a/app.wxss
+++ b/app.wxss
@@ -109,3 +109,20 @@ image{
   font-weight:500;
   color:rgba(153,153,153,1);
 }
+
+input{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  line-height:24rpx;
+}
+
+.wx-switch-input{
+  width:102rpx !important;height:60rpx !important;
+}
+.wx-switch-input::before{
+  width:102rpx !important;height: 60rpx !important;
+}
+.wx-switch-input::after{
+  width: 54rpx !important;height: 54rpx !important;
+}
