--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -1,3 +1,43 @@
 <!--pages/user/user.wxml-->
-<text>pages/user/user.wxml</text>
+
+<view class='userBox'>
+  <view class='imgBox'><image src=''></image></view>
+  <view class='userName'>用户昵称</view>
+  <view class='money'>
+    <view class='title'>储值金额</view>
+    <view class='value'>0.00</view>
+    <view class='icon'><image src='./res/img/icon_right_click.png'></image></view>
+  </view>
+</view>
+
+<view class='chongZhiBox'>
+  <view class='chognzhiTitle'>选择充值方式</view>
+  <view class='cardList'>
+    <view class='itemCard' wx:for="{{cardList}}" wx:key="index">
+      <view class='cardTitle'>{{item.title}}</view>
+      <view class='cardContent'>
+        <view class='cardPrice'>
+          <view class='cardPrice0'>￥</view>
+          <view class='cardPrice1'>{{item.price}}</view>
+        </view>
+        <view class='cardInfoBox'>
+          <view class='cardImg'><image src='./res/img/icon-coupon.png'></image></view>
+          <view class='cardInfo'>{{item.info}}</view>
+        </view>
+      </view>
+    </view>
+  </view>
+
+</view>
+
+
+<view class='infoList'>
+  <info-item bindtap='fun' data-ev='{{item}}' wx:for='{{infoList}}' wx:key='index' info="{{item}}"></info-item>
+</view>
+
+
+
+
+
+
 <nav-bottom selected-index='3'></nav-bottom>
