--- a/app.wxss
+++ b/app.wxss
@@ -13,9 +13,13 @@ page{
   background:rgba(245,245,245,1);
   margin-bottom: 150rpx;
 }
-
-image{
-  border: 1px solid #ccc;
+.icon{
+  width: 46rpx;
+  height: 46rpx;
+}
+.icon image{
+  width: 100%;
+  height: 100%;
 }
 
 .dedPrice{
