--- a/pages/address/editaddress/editaddress.wxml
+++ b/pages/address/editaddress/editaddress.wxml
@@ -1,28 +1,33 @@
 <!--pages/address/editaddress/editaddress.wxml-->
 
-<form>
+<form bindsubmit='formSubmit'>
 
   <view class='inputItem'>
     <view class='fontTitle'>联系人</view>
     <view class='input'>
-      <input name='name' placeholder='姓名'></input>
+      <input name='realname' placeholder='姓名'></input>
     </view>
   </view>
 
   <view class='inputItem radioSex'>
-    <radio-group class="radio-group" bindchange="radioChange">
+
+
+    <radio-group name='sex' class="radio-group" data-obj='radioSex' bindchange="radioChange">
       <label class="radio" wx:for="{{radioSex}}">
         <radio value="{{item.name}}" checked="{{item.checked}}"/>
-        {{item.value}}
+        <image class='radioIcon' src='{{item.checked ? "../res/img/icon-sel-pre.png": "../res/img/icon-sel-normal.png"}}'></image>
+        <view class='radioText'>{{item.value}}</view>
       </label>
     </radio-group>
+
+
   </view>
   
 
   <view class='inputItem'>
     <view class='fontTitle'>电话</view>
     <view class='input'>
-      <input name='name' placeholder='手机号码'></input>
+      <input name='mobile' placeholder='手机号码'></input>
     </view>
   </view>
 
@@ -30,23 +35,38 @@
   <view class='inputItem'>
     <view class='fontTitle'>地址</view>
     <view class='input'>
-      <input name='name' placeholder='请选择收货地址'></input>
+    
+      <view class="section">
+        <picker name='address0' mode="region" bindchange="bindRegionChange" value="{{region}}" custom-item="{{customItem}}">
+          <view class="picker">
+          <input placeholder='请选择收货地址' value='{{region[0].length > 0 ? region : ""}}'></input>
+          </view>
+        </picker>
+      </view>
+
+      
+
+      
+
     </view>
   </view>
 
   <view class='inputItem'>
-    <view class='text'>例：紫金相府A栋1705</view>
+    <input class='text' name='address' placeholder='例：紫金相府A栋1705'></input>
   </view>
 
   <view class='inputItem'>
     <view class='fontTitle'>标签</view>
     <view class='input radioLabel'>
-      <radio-group class="radio-group" bindchange="radioChange">
-        <label class="radio" wx:for="{{radioSex}}">
+
+      <radio-group name='type' class="radio-group" data-obj='radioLabel' bindchange="radioChange">
+        <label class="radio" wx:for="{{radioLabel}}">
           <radio value="{{item.name}}" checked="{{item.checked}}"/>
-          {{item.value}}
+          <image class='radioIcon' src='{{item.checked ? "../res/img/icon-sel-pre.png": "../res/img/icon-sel-normal.png"}}'></image>
+          <view class='radioText'>{{item.value}}</view>
         </label>
       </radio-group>
+
     </view>
   </view>
 
@@ -54,11 +74,11 @@
     <view class='inputItem'>
     <view class='fontTitle'>设为默认</view>
     <view class='input switchBox'>
-      <switch color='#6C4127' checked bindchange="switch1Change"/>
+      <switch name='isdefault' color='#6C4127' bindchange="switch1Change"/>
     </view>
   </view>
 
 
-<view class='btnSpecialBlock'>保存</view>
+<button class='btnSpecialBlock' loading='{{subLoading}}' form-type='submit'>保存</button>
 
 </form>
