--- a/pages/join/gifts/gifts.wxss
+++ b/pages/join/gifts/gifts.wxss
@@ -97,7 +97,7 @@
   position: fixed;
   bottom: 0;
   background: #ccc;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
 }
 .backDark{
@@ -195,4 +195,20 @@
 .closeInfo .iconClose{
   width: 64rpx;
   height: 64rpx;
+}
+.orderContentLeftTop{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(51,51,51,1);
+}
+.orderContentLeftBottom{
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(153,153,153,1);
+  line-height:44rpx;
 }
