--- a/app.wxss
+++ b/app.wxss
@@ -130,3 +130,17 @@ input{
 .wx-switch-input::after{
   width: 54rpx !important;height: 54rpx !important;
 }
+.asdw1{
+  font-size: 24rpx;
+}
+.userImg{
+  width: 140rpx;
+  height: 140rpx;
+}
+
+.userImg image{
+  width: 140rpx;
+  height: 140rpx;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+}
