--- a/pages/user/referCenter/referCenter.wxml
+++ b/pages/user/referCenter/referCenter.wxml
@@ -1,2 +1,52 @@
 <!--pages/user/referCenter/referCenter.wxml-->
-<text>pages/user/referCenter/referCenter.wxml</text>
+
+<view class='back'>
+</view>
+
+
+  <view class='userBox'>
+    <view class='userImg'>
+      <image src='{{}}'></image>
+    </view>
+    <view class='nameBox'>
+      <view class='userName'>用户昵称</view>
+      <view class='userLevel'>董事合伙人</view>
+    </view>
+  </view>
+
+  <view class='cardBox'>
+    <view class='cardTop'>
+      <view>累计收益 （元）</view>
+      <view class='num'>45636.02</view>
+      <view>收益明细</view>
+    </view>
+    <view class='cardBottom'>
+      <view class='cardBotmItem'>
+        <view>10</view>
+        <view>今日单量</view>
+      </view>
+      <view class='cardBotmItem'>
+        <view>10</view>
+        <view>团队规模</view>
+      </view>
+    </view>
+  </view>
+
+
+<view class='oootBox'>
+
+
+  <view class='otBox'>
+  
+    <navigator open-type='navigate' url='{{item.url}}' class='otItem' wx:for='{{otList}}' wx:key="index">
+      <view>{{item.title}}</view>
+      <view class='22num'>￥{{item.num}}</view>
+      <view>{{item.btnTitle}}</view>
+    </navigator>
+  </view>
+
+
+<view class='otherBox'>
+ <info-item data-index='{{index}}' bindtap='navTo' wx:for="{{otherInfoList}}" wx:key="index" info="{{item}}"></info-item>
+</view>
+</view>
