--- a/pages/user/chooseCard/chooseCard.wxss
+++ b/pages/user/chooseCard/chooseCard.wxss
@@ -1,1 +1,70 @@
 /* pages/user/chooseCard/chooseCard.wxss */
+.cardImg{
+  height:120rpx;
+  width:400rpx;
+  margin:25rpx 40rpx 0 40rpx;
+}
+.cardImg image{
+  height: 100%;
+  width: 100%;
+}
+.cardItem{
+  background: #fff;
+  margin: 30rpx 24rpx 0 24rpx;
+  border-radius:5rpx;
+  overflow: hidden;
+}
+.TopTop{
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: center;
+}
+.TopBottom{
+  font-size:40rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(102,102,102,1);
+  margin: 50rpx 44rpx;
+}
+.itemBottom{
+  border-top: 1rpx solid #f6f6f6;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 24rpx 40rpx;
+}
+.bottomLeft{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+
+
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(51,51,51,1);
+}
+
+.bottomRight{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(51,51,51,1);
+}
+
+.bottomRight view:last-child{
+  margin-left: 12rpx;
+}
+.bottomLeft view:last-child{
+  margin-left: 12rpx;
+}
+
+.btnSpecialBlock{
+  width: auto;
+  margin: 28rpx 46rpx;
+}
