--- a/pages/user/draw/draw.wxss
+++ b/pages/user/draw/draw.wxss
@@ -81,3 +81,65 @@
   flex-direction: row;
   align-items: center;
 }
+
+.input{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 20rpx;
+}
+
+.dialogMask{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.5;
+  z-index: 1;
+
+}
+
+.dialogBack{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+.dialogBox{
+  position: relative;
+  margin: 338rpx 120rpx;
+  width:508rpx;
+  height:318rpx;
+  background:rgba(255,255,255,1);
+  border-radius:10rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.dialogTop{
+  position: absolute;
+  height: 218rpx;
+  text-align: center;
+  font-size:28rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(102,102,102,1);
+  padding: 85rpx 25rpx;
+
+}
+.dialogBottom{
+  position: absolute;
+  background: #f6f6f6;
+  width: 100%;
+  height: 100rpx;
+  text-align: center;
+  line-height: 100rpx;
+  bottom: 0;
+
+  font-size:32rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(130,76,31,1);
+}
