--- a/app.wxss
+++ b/app.wxss
@@ -139,8 +139,8 @@ input{
 }
 
 .userImg image{
-  width: 140rpx;
-  height: 140rpx;
+  width: 100%;
+  height: 100%;
   border: 1px solid #ccc;
   border-radius: 50%;
 }
