--- a/components/addressItem/index.wxss
+++ b/components/addressItem/index.wxss
@@ -59,3 +59,16 @@
   width: 100%;
   height: 100%;
 }
+
+.orderContentLeftBottom view{
+  display: inline;
+  padding:4rpx 17rpx;
+  background:rgba(204,0,0,1);
+  border-radius:15rpx;
+  font-size:20rpx;
+  font-family:PingFang-SC-Medium;
+  font-weight:500;
+  color:rgba(255,255,255,1);
+  line-height:24rpx;
+  margin-right:15rpx;
+}
