--- a/pages/address/address.wxml
+++ b/pages/address/address.wxml
@@ -3,32 +3,41 @@
 <view class='addressList'>
   <view class='addressItem' wx:for='{{addressList}}' wx:key='index'>
 
-
-  <view class='titleBox'>
-    <view class='nameBox'><view class='fontTitle'>{{item.realname}} {{item.sex == "1" ? '（先生）' : '女士'}}</view></view>
-    <view class='mobile fontTitle'>{{item.mobile}}</view>
-  </view>
-
-  <view class='contentBox fontInfo'>
-    <view>{{item.province}} {{item.city}} {{item.area}} {{item.address}}</view>
-  </view>
-
-  <view class='addrFoot'>
-    <view class='footLeft' data-id='{{item.id}}' bindtap='changeDefault'>
-      <view class='iconSelect'><image src='{{item.isdefault == "1" ?  "./res/img/icon-sel-pre.png" : "./res/img/icon-sel-normal.png"}}'></image></view>
-      <view class='fontTitle'>默认地址</view>
-    </view>
-    <view class='footRight'>
-      <view class='btn'>
-        <view class='iconEdit'><image src='./res/img/icon-edit.png'></image></view>
-        <view class='fontTitle' bindtap='navToEdit' data-addressId='{{item.id}}'>编辑</view>
-      <view class='btn'>
-        <view class='iconDel'><image src='./res/img/icon-delete.png'></image></view>
-        <view class='fontTitle' data-id='{{item.id}}' bindtap='delAddress'>删除</view>
+    <view bindtap='navBack' data-item='{{item}}'>
+      <view class='titleBox'>
+        <view class='nameBox'>
+          <view class='fontTitle'>{{item.realname}} {{item.sex == "1" ? '（先生）' : '女士'}}</view>
+        </view>
+        <view class='mobile fontTitle'>{{item.mobile}}</view>
       </view>
-      </view><!--两个btn-->
+
+      <view class='contentBox fontInfo'>
+        <view>{{item.province}} {{item.city}} {{item.area}} {{item.address}}</view>
+      </view>
     </view>
-  </view>
+    <view class='addrFoot'>
+      <view class='footLeft' data-id='{{item.id}}' bindtap='changeDefault'>
+        <view class='iconSelect'>
+          <image src='{{item.isdefault == "1" ?  "./res/img/icon-sel-pre.png" : "./res/img/icon-sel-normal.png"}}'></image>
+        </view>
+        <view class='fontTitle'>默认地址</view>
+      </view>
+      <view class='footRight'>
+        <view class='btn'>
+          <view class='iconEdit'>
+            <image src='./res/img/icon-edit.png'></image>
+          </view>
+          <view class='fontTitle' bindtap='navToEdit' data-addressId='{{item.id}}'>编辑</view>
+          <view class='btn'>
+            <view class='iconDel'>
+              <image src='./res/img/icon-delete.png'></image>
+            </view>
+            <view class='fontTitle' data-id='{{item.id}}' bindtap='delAddress'>删除</view>
+          </view>
+        </view>
+        <!--两个btn-->
+      </view>
+    </view>
 
   </view>
 </view>
