--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -205,6 +205,8 @@ color:rgba(51,51,51,1);
 }
 .orderOptionContent{
   padding: 34rpx 0;
+  display: flex;
+  flex-direction: row;
 }
 .orderOptionItem{
 background:rgba(245,245,245,1);
