--- a/pages/order/orderdetail/orderdetail.wxml
+++ b/pages/order/orderdetail/orderdetail.wxml
@@ -8,12 +8,14 @@
   </view>
   <view wx:if='{{orderDetail.top.status == "0"}}' class='fontSpecial'>支付剩余时间:{{orderDetail.top.time}}</view>
   <view  wx:if='{{orderDetail.top.status == "1" || orderDetail.top.status == "2"}}' class='fontSpecial'>物流信息: {{orderDetail.top.wuliu}}</view>
-  <view wx:if='{{orderDetail.top.status == "3"}}' class=''>
+  <view wx:if='{{orderDetail.top.status == "3"}}' class='wuliuItemBox'>
     <view class='left'>
       <view class='fontSpecial'>快递已签收，签收人： {{orderDetail.top.realname}}</view>
       <view class='fontInfo'>{{orderDetail.top.finishtime}}</view>
     </view>
-    <view class='icon'><!--右箭头--></view>
+    <view class='icon'><!--右箭头-->
+      <image src='/res/icon/icon_right_click.png'></image>
+    </view>
 
   </view>
 </view>
@@ -28,8 +30,8 @@
     <view class='fontTitle'>{{orderDetail.address.mobile}}</view>
   </view>
   <view class='userContentBox'>
-    <view class='addreType'>默认</view>
-    <view class='fontTitle'>{{orderDetail.address.province}} {{orderDetail.address.city}} {{orderDetail.address.area}} {{orderDetail.address.address}}</view>
+    
+    <view class='fontTitle'><view class='addreType'>默认</view> {{orderDetail.address.province}} {{orderDetail.address.city}} {{orderDetail.address.area}} {{orderDetail.address.address}}</view>
   </view>
 </view>
 
@@ -60,11 +62,11 @@
   </view>
   <view class='orderPriceInfoBox'>
     <view class='title'>快递</view>
-    <view class='price'>￥{{}}</view>
+    <view class='kuaidi'>￥0.00</view>
   </view>
   <view class='orderPriceInfoBox'>
     <view class='title'>支付方式</view>
-    <view class=''>{{orderDetail.order.paytype}}</view>
+    <view class='payType'><view class='icon'><image src='/res/icon/wechat.png'></image></view>{{payType[orderDetail.order.paytype]}}</view>
   </view>
 </view>
 
